roles/centos-15-gitlab-ce/docker/2.gitlab-pvc-svc-ingress.yaml
# NFS FS exports should be "no_root_squash"
---
kind: Service
apiVersion: v1
metadata:
  name: gitlab-ce
  namespace: infra
spec:
  type: NodePort
  selector:
    app: gitlab-ce
  ports:
  - name: ssh
    protocol: TCP
    port: 22
    nodePort: 30022
  - name: http
    protocol: TCP
    port: 80
    nodePort: 30080
  - name: https
    protocol: TCP
    port: 443
    nodePort: 30443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "128m"
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/name: gitlab-ce
  name: gitlab-ce
  namespace: infra
spec:
  rules:
  - host: gitlab.mwportal.com
    http:
      paths:
      - backend:
          serviceName: gitlab-ce
          servicePort: 80
        path: /
